# n8n-solar

docker/images/n8n-custom/: Dockerfile  docker-entrypoint.sh  n8n-task-runners.json  pyproject.toml
